unpackaged/main/default/objects/Snapshot__c/fields/Opp_BD_Winning_Odds__c.field-meta.xml
<CustomField>
    <fullName>Opp_BD_Winning_Odds__c</fullName>
    <description>Opportunity Winning Odds %</description>
    <label>Opp BD Winning Odds</label>
    <type>TextArea</type>
</CustomField>