unpackaged/main/default/objects/Snapshot__c/fields/Opp_Bid_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Bid_Submit_Date__c</fullName>
    <description>Opp Bid Submit Date</description>
    <label>Opp Bid Submit Date</label>
    <type>Date</type>
</CustomField>