unpackaged/main/default/objects/Snapshot__c/fields/Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Close_Date__c</fullName>
    <description>Opportunity Close Date</description>
    <label>Opp Close Date</label>
    <type>Date</type>
</CustomField>