unpackaged/main/default/objects/Snapshot__c/fields/Opp_Contract__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contract__c</fullName>
    <description>Opp Contract #</description>
    <label>Opp Contract #</label>
    <type>TextArea</type>
</CustomField>