unpackaged/main/default/objects/Snapshot__c/fields/Opp_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contract_Value__c</fullName>
    <description>Opp Contract Value</description>
    <label>Opp Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>