unpackaged/main/default/objects/Snapshot__c/fields/Opp_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Created_Date__c</fullName>
    <description>Opportunity Created Date</description>
    <label>Opp Created Date</label>
    <type>Date</type>
</CustomField>