unpackaged/main/default/objects/Snapshot__c/fields/Opp_Customer_Winning_Odds__c.field-meta.xml
<CustomField>
    <fullName>Opp_Customer_Winning_Odds__c</fullName>
    <description>Opportunity Customer Winning Odds</description>
    <label>Opp Customer Winning Odds</label>
    <type>TextArea</type>
</CustomField>