unpackaged/main/default/objects/Snapshot__c/fields/Opp_Div_Region__c.field-meta.xml
<CustomField>
    <fullName>Opp_Div_Region__c</fullName>
    <description>Opportunity Division/Region</description>
    <label>Opp Div/Region</label>
    <type>TextArea</type>
</CustomField>