unpackaged/main/default/objects/Snapshot__c/fields/Opp_Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Estimated_Delivery_Date__c</fullName>
    <description>Estimated Delivery Date from Opp</description>
    <inlineHelpText>Estimated Delivery Date from Opp</inlineHelpText>
    <label>Opp Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>