unpackaged/main/default/objects/Snapshot__c/fields/Opp_Estimated_First_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opp_Estimated_First_Revenue__c</fullName>
    <description>Opportunity Estimated First Revenue</description>
    <label>Opp Estimated First Revenue</label>
    <type>Date</type>
</CustomField>