unpackaged/main/default/objects/Snapshot__c/fields/Opp_Industry_Segment_Site_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Industry_Segment_Site_Owner__c</fullName>
    <description>Opportunity Industry Segment - Site Owner</description>
    <label>Opp  Industry Segment - Site Owner</label>
    <type>TextArea</type>
</CustomField>