unpackaged/main/default/objects/Snapshot__c/fields/Opp_Industry_Site_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Industry_Site_Owner__c</fullName>
    <description>Opp Industry - Site Owner</description>
    <label>Opp Industry - Site Owner</label>
    <type>TextArea</type>
</CustomField>