unpackaged/main/default/objects/Snapshot__c/fields/Opp_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opp_Lead_Source__c</fullName>
    <label>Opp Lead Source</label>
    <type>TextArea</type>
</CustomField>