unpackaged/main/default/objects/Snapshot__c/fields/Opp_Number_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Opp_Number_of_Floors__c</fullName>
    <label>Opp # of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>