unpackaged/main/default/objects/Snapshot__c/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <description>Opportunity Owner</description>
    <label>Opp Owner</label>
    <type>TextArea</type>
</CustomField>