unpackaged/main/default/objects/Snapshot__c/fields/Opp_Owner_BDG_Branch__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_BDG_Branch__c</fullName>
    <description>Opportunity Owner BDG Branch</description>
    <label>Opp Owner BDG Branch</label>
    <type>TextArea</type>
</CustomField>