unpackaged/main/default/objects/Snapshot__c/fields/Opp_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opp_Probability__c</fullName>
    <description>Opportunity Probability</description>
    <label>Opp Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>