unpackaged/main/default/objects/Snapshot__c/fields/Opp_Profit_Production_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Opp_Profit_Production_Primary_Quote__c</fullName>
    <description>Opportunity - Profit Production from primary quote</description>
    <label>Opp Profit Production - Primary Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>