unpackaged/main/default/objects/Snapshot__c/fields/Opp_SAP_Project__c.field-meta.xml
<CustomField>
    <fullName>Opp_SAP_Project__c</fullName>
    <label>Opp SAP Project #</label>
    <type>TextArea</type>
</CustomField>