unpackaged/main/default/objects/Snapshot__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <description>Opportunity Stage</description>
    <label>Opp Stage</label>
    <type>TextArea</type>
</CustomField>