unpackaged/main/default/objects/Snapshot__c/fields/Opp_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Opp_Term_Length__c</fullName>
    <description>Opportunity Term Length in months</description>
    <label>Opp Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>