unpackaged/main/default/objects/Snapshot__c/fields/Opp_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Transaction_Type__c</fullName>
    <description>Opportunity Transaction Type</description>
    <label>Opp Transaction Type</label>
    <type>TextArea</type>
</CustomField>