unpackaged/main/default/objects/Snapshot__c/fields/Opp_Transaction_Type_Quote__c.field-meta.xml
<CustomField>
    <fullName>Opp_Transaction_Type_Quote__c</fullName>
    <description>Opportunity Transaction Type (Quote)</description>
    <label>Opp Transaction Type (Quote)</label>
    <type>TextArea</type>
</CustomField>