unpackaged/main/default/objects/Snapshot__c/fields/Opp_Weighted_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Opp_Weighted_Contract_Value__c</fullName>
    <description>Opp Weighted Contract Value</description>
    <label>Opp Weighted Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>