unpackaged/main/default/objects/Snapshot__c/fields/Opp_Weighted_Profit_Production__c.field-meta.xml
<CustomField>
    <fullName>Opp_Weighted_Profit_Production__c</fullName>
    <description>Opportunity Weighted Profit Production</description>
    <label>Opp Weighted Profit Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>