unpackaged/main/default/objects/Snapshot__c/fields/Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Name__c</fullName>
    <description>Opportunity Account Name</description>
    <label>Opportunity Account Name</label>
    <type>TextArea</type>
</CustomField>