unpackaged/main/default/objects/Snapshot__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Opp ID for tracking purposes for snapshot reports</description>
    <label>Opportunity ID</label>
    <type>TextArea</type>
</CustomField>