unpackaged/main/default/objects/Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <label>Opportunity Name</label>
    <type>TextArea</type>
</CustomField>