unpackaged/main/default/objects/Snapshot__c/fields/Reporting_Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Snapshot_Name__c</fullName>
    <description>Reporting Snapshot Name</description>
    <inlineHelpText>Used to limit results to particular snapshots</inlineHelpText>
    <label>Reporting Snapshot Name</label>
    <type>TextArea</type>
</CustomField>